assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 10 conflicts: 2 shift/reduce
State 16 conflicts: 2 shift/reduce
State 158 conflicts: 9 shift/reduce
State 176 conflicts: 9 shift/reduce
State 178 conflicts: 9 shift/reduce
State 186 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error

    7 feature_list: %empty
    8             | feature ';'
    9             | feature_list feature ';'
   10             | error ';'
   11             | feature_list error ';'

   12 feature: OBJECTID '(' ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID '(' formal ')' ':' TYPEID '{' expression '}'
   14        | OBJECTID '(' formal formal_list ')' ':' TYPEID '{' expression '}'
   15        | OBJECTID ':' TYPEID
   16        | OBJECTID ':' TYPEID ASSIGN expression

   17 formal_list: ',' formal
   18            | formal_list ',' formal

   19 formal: OBJECTID ':' TYPEID

   20 case_list: case
   21          | case_list case

   22 case: OBJECTID ':' TYPEID DARROW expression ';'

   23 expression_comma_list: ',' expression
   24                      | expression_comma_list ',' expression

   25 expression_semicolon_list: expression ';'
   26                          | expression_semicolon_list expression ';'

   27 expression_sub_let: ',' OBJECTID ':' TYPEID IN expression
   28                   | ',' OBJECTID ':' TYPEID ASSIGN expression IN expression
   29                   | ',' OBJECTID ':' TYPEID expression_sub_let
   30                   | ',' OBJECTID ':' TYPEID ASSIGN expression expression_sub_let
   31                   | error expression_sub_let

   32 expression: OBJECTID ASSIGN expression
   33           | expression '.' OBJECTID '(' ')'
   34           | expression '.' OBJECTID '(' expression ')'
   35           | expression '.' OBJECTID '(' expression expression_comma_list ')'
   36           | expression '@' TYPEID '.' OBJECTID '(' ')'
   37           | expression '@' TYPEID '.' OBJECTID '(' expression ')'
   38           | expression '@' TYPEID '.' OBJECTID '(' expression expression_comma_list ')'
   39           | OBJECTID '(' ')'
   40           | OBJECTID '(' expression ')'
   41           | OBJECTID '(' expression expression_comma_list ')'
   42           | IF expression THEN expression ELSE expression FI
   43           | WHILE expression LOOP expression POOL
   44           | '{' expression_semicolon_list '}'
   45           | '{' error expression_semicolon_list '}'
   46           | '{' expression_semicolon_list error ';' expression_semicolon_list '}'
   47           | '{' expression_semicolon_list error ';' '}'
   48           | LET OBJECTID ':' TYPEID IN expression
   49           | LET OBJECTID ':' TYPEID ASSIGN expression IN expression
   50           | LET OBJECTID ':' TYPEID expression_sub_let
   51           | LET OBJECTID ':' TYPEID ASSIGN expression expression_sub_let
   52           | LET error expression_sub_let
   53           | CASE expression OF case_list ESAC
   54           | NEW TYPEID
   55           | ISVOID expression
   56           | expression '+' expression
   57           | expression '-' expression
   58           | expression '*' expression
   59           | expression '/' expression
   60           | '~' expression
   61           | expression '<' expression
   62           | expression '=' expression
   63           | expression LE expression
   64           | NOT expression
   65           | '(' expression ')'
   66           | OBJECTID
   67           | INT_CONST
   68           | STR_CONST
   69           | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 12 13 14 33 34 35 36 37 38 39 40 41 65
    ')' (41) 12 13 14 33 34 35 36 37 38 39 40 41 65
    '*' (42) 58
    '+' (43) 56
    ',' (44) 17 18 23 24 27 28 29 30
    '-' (45) 57
    '.' (46) 33 34 35 36 37 38
    '/' (47) 59
    ':' (58) 12 13 14 15 16 19 22 27 28 29 30 48 49 50 51
    ';' (59) 4 5 8 9 10 11 22 25 26 46 47
    '<' (60) 61
    '=' (61) 62
    '@' (64) 36 37 38
    '{' (123) 4 5 12 13 14 44 45 46 47
    '}' (125) 4 5 12 13 14 44 45 46 47
    '~' (126) 60
    error (256) 6 10 11 31 45 46 47 52
    CLASS (258) 4 5
    ELSE (259) 42
    FI (260) 42
    IF (261) 42
    IN (262) 27 28 48 49
    INHERITS (263) 5
    LET (264) 48 49 50 51 52
    LOOP (265) 43
    POOL (266) 43
    THEN (267) 42
    WHILE (268) 43
    CASE (269) 53
    ESAC (270) 53
    OF (271) 53
    DARROW (272) 22
    NEW (273) 54
    ISVOID (274) 55
    STR_CONST <symbol> (275) 68
    INT_CONST <symbol> (276) 67
    BOOL_CONST <boolean> (277) 69
    TYPEID <symbol> (278) 4 5 12 13 14 15 16 19 22 27 28 29 30 36 37 38 48 49 50 51 54
    OBJECTID <symbol> (279) 12 13 14 15 16 19 22 27 28 29 30 32 33 34 35 36 37 38 39 40 41 48 49 50 51 66
    ASSIGN (280) 16 28 30 32 49 51
    NOT (281) 64
    LE (282) 63
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8 9 10 11
        on right: 4 5 9 11
    feature <feature> (50)
        on left: 12 13 14 15 16
        on right: 8 9
    formal_list <formals> (51)
        on left: 17 18
        on right: 14 18
    formal <formal> (52)
        on left: 19
        on right: 13 14 17 18
    case_list <cases> (53)
        on left: 20 21
        on right: 21 53
    case <case_> (54)
        on left: 22
        on right: 20 21
    expression_comma_list <expressions> (55)
        on left: 23 24
        on right: 24 35 38 41
    expression_semicolon_list <expressions> (56)
        on left: 25 26
        on right: 26 44 45 46 47
    expression_sub_let <expression> (57)
        on left: 27 28 29 30 31
        on right: 29 30 31 50 51 52
    expression <expression> (58)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 12 13 14 16 22 23 24 25 26 27 28 30 32 33 34 35 36 37 38 40 41 42 43 48 49 51 53 55 56 57 58 59 60 61 62 63 64 65


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error .

    $default  reduce using rule 6 (class)


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 6


State 3

    0 $accept: program . $end

    $end  shift, and go to state 7


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


State 10

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 14
    feature       go to state 15


State 11

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 16


State 12

   10 feature_list: error . ';'

    ';'  shift, and go to state 17


State 13

   12 feature: OBJECTID . '(' ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID . '(' formal ')' ':' TYPEID '{' expression '}'
   14        | OBJECTID . '(' formal formal_list ')' ':' TYPEID '{' expression '}'
   15        | OBJECTID . ':' TYPEID
   16        | OBJECTID . ':' TYPEID ASSIGN expression

    '('  shift, and go to state 18
    ':'  shift, and go to state 19


State 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature ';'
   11             | feature_list . error ';'

    error     shift, and go to state 20
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 21

    feature  go to state 22


State 15

    8 feature_list: feature . ';'

    ';'  shift, and go to state 23


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 24
    feature       go to state 15


State 17

   10 feature_list: error ';' .

    $default  reduce using rule 10 (feature_list)


State 18

   12 feature: OBJECTID '(' . ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID '(' . formal ')' ':' TYPEID '{' expression '}'
   14        | OBJECTID '(' . formal formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 25
    ')'       shift, and go to state 26

    formal  go to state 27


State 19

   15 feature: OBJECTID ':' . TYPEID
   16        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 28


State 20

   11 feature_list: feature_list error . ';'

    ';'  shift, and go to state 29


State 21

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 30


State 22

    9 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 31


State 23

    8 feature_list: feature ';' .

    $default  reduce using rule 8 (feature_list)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature ';'
   11             | feature_list . error ';'

    error     shift, and go to state 20
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 32

    feature  go to state 22


State 25

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 33


State 26

   12 feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 34


State 27

   13 feature: OBJECTID '(' formal . ')' ':' TYPEID '{' expression '}'
   14        | OBJECTID '(' formal . formal_list ')' ':' TYPEID '{' expression '}'

    ')'  shift, and go to state 35
    ','  shift, and go to state 36

    formal_list  go to state 37


State 28

   15 feature: OBJECTID ':' TYPEID .
   16        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 38

    $default  reduce using rule 15 (feature)


State 29

   11 feature_list: feature_list error ';' .

    $default  reduce using rule 11 (feature_list)


State 30

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 31

    9 feature_list: feature_list feature ';' .

    $default  reduce using rule 9 (feature_list)


State 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 39


State 33

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 40


State 34

   12 feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 41


State 35

   13 feature: OBJECTID '(' formal ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 42


State 36

   17 formal_list: ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 43


State 37

   14 feature: OBJECTID '(' formal formal_list . ')' ':' TYPEID '{' expression '}'
   18 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 44
    ','  shift, and go to state 45


State 38

   16 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 60


State 39

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 40

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 41

   12 feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 61


State 42

   13 feature: OBJECTID '(' formal ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 62


State 43

   17 formal_list: ',' formal .

    $default  reduce using rule 17 (formal_list)


State 44

   14 feature: OBJECTID '(' formal formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 63


State 45

   18 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 64


State 46

   42 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 65


State 47

   48 expression: LET . OBJECTID ':' TYPEID IN expression
   49           | LET . OBJECTID ':' TYPEID ASSIGN expression IN expression
   50           | LET . OBJECTID ':' TYPEID expression_sub_let
   51           | LET . OBJECTID ':' TYPEID ASSIGN expression expression_sub_let
   52           | LET . error expression_sub_let

    error     shift, and go to state 66
    OBJECTID  shift, and go to state 67


State 48

   43 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 68


State 49

   53 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 69


State 50

   54 expression: NEW . TYPEID

    TYPEID  shift, and go to state 70


State 51

   55 expression: ISVOID . expression

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 71


State 52

   68 expression: STR_CONST .

    $default  reduce using rule 68 (expression)


State 53

   67 expression: INT_CONST .

    $default  reduce using rule 67 (expression)


State 54

   69 expression: BOOL_CONST .

    $default  reduce using rule 69 (expression)


State 55

   32 expression: OBJECTID . ASSIGN expression
   39           | OBJECTID . '(' ')'
   40           | OBJECTID . '(' expression ')'
   41           | OBJECTID . '(' expression expression_comma_list ')'
   66           | OBJECTID .

    ASSIGN  shift, and go to state 72
    '('     shift, and go to state 73

    $default  reduce using rule 66 (expression)


State 56

   64 expression: NOT . expression

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 74


State 57

   60 expression: '~' . expression

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expression  go to state 75


State 58

   44 expression: '{' . expression_semicolon_list '}'
   45           | '{' . error expression_semicolon_list '}'
   46           | '{' . expression_semicolon_list error ';' expression_semicolon_list '}'
   47           | '{' . expression_semicolon_list error ';' '}'
